# kimo_ros

./: README.md
dof_config/: CMakeLists.txt  package.xml  rqt_gui_pid_control.perspective
dof_config/config/: controllers.yaml  dof_fit.srdf  dof_fit_ros_control.yaml  fake_controllers.yaml  gazebo_ros_control_params.yaml  gazebo_ros_control_params_effort.yaml  joint_limits.yaml  joint_names.yaml  kimo_control.yaml  kimo_control_effort.yaml  ompl_planning.yaml  ros_controllers.yaml
dof_config/launch/: calibrate.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dof_fit_moveit_controller_manager.launch.xml  dof_fit_planning_execution.launch  gazebo.launch  kimo_control.launch  kimo_gazebo.launch  kimo_moveit_control.launch  move_group.launch  moveit_control.launch  my_robot_control_effort.launch  my_robot_control_position.launch  (+16 more)
dof_fit/: CMakeLists.txt  package.xml
ros_control_boilerplate/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros_control_boilerplate/dof_fit_control/: CMakeLists.txt  package.xml
ros_control_boilerplate/dof_fit_control/config/: dof_fit_controllers.yaml
ros_control_boilerplate/dof_fit_control/include/dof_fit_control/: dof_fit_hw_interface.h
ros_control_boilerplate/dof_fit_control/launch/: arm_move.launch  dof_fit_hardware.launch  dof_fit_simulation.launch  dof_fit_test_trajectory.launch  dof_fit_visualize.launch
ros_control_boilerplate/dof_fit_control/scripts/: get_date.py
ros_control_boilerplate/dof_fit_control/src/: dof_fit_hw_interface.cpp  dof_fit_hw_main.cpp
(+18 files in other folders)
